--- a/css/styles.css
+++ b/css/styles.css
@@ -11,8 +11,9 @@ body {
   --background-header-footer: #2f303a;
   --activ: #2196f3;
   --primary-color: #000000;
-  --white-color: #ffffff;
+  --lite-color: #ffffff;
   --logo: #2196f3;
+  --contacts-footer-color: rgb(255, 255, 255, 0.6);
 }
 
 a {
@@ -42,7 +43,7 @@ li {
 }
 
 .site-nav .link {
-  color: #000000;
+  color: #212121;
   font-weight: 500;
   font-size: 14px;
   line-height: 1.1;
@@ -72,7 +73,7 @@ li {
 }
 
 .hero .title {
-  color: var(--white-color);
+  color: var(--lite-color);
   font-weight: 900;
   font-size: 44px;
   line-height: 1.35;
@@ -80,11 +81,13 @@ li {
 }
 
 .hero .btn {
-  color: var(--white-color);
+  font-family: "Roboto", sans-serif;
+  color: var(--lite-color);
   background-color: var(--activ);
   font-weight: 700;
   font-size: 16px;
-  line-height: 1.8;
+  line-height: 1.87;
+  letter-spacing: 0.06em;
 }
 
 /* .hero .btn:focus,
@@ -141,7 +144,7 @@ li {
 .cards {
   height: 368px;
   width: 270px;
-  background-color: var(--white-color);
+  background-color: var(--lite-color);
 }
 
 .team .profession {
@@ -153,16 +156,18 @@ li {
 /* MAIN PORTFOLIO */
 
 .filters .btn {
-  color: rgba(33, 33, 33, 1);
+  font-family: "Roboto", sans-serif;
   font-weight: 500;
   font-size: 16px;
-  line-height: 1.17;
+  line-height: 1.62;
+  letter-spacing: 0.03em;
+  color: rgba(33, 33, 33, 1);
 }
 
 .filters .btn:focus,
 .filters .btn:hover {
   background-color: var(--activ);
-  color: var(--white-color);
+  color: var(--lite-color);
 }
 
 .projects .title {
@@ -186,7 +191,7 @@ li {
 }
 
 .footer .web {
-  color: var(--white-color);
+  color: var(--lite-color);
 }
 
 .footer .link {
@@ -202,12 +207,16 @@ li {
   font-weight: 400;
   font-size: 14px;
   line-height: 1.7;
+  font-style: normal;
 }
 
 .address .street {
-  color: var(--white-color);
+  color: var(--lite-color);
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 1.72;
 }
 
-.address .getcontact {
-  color: rgba(255, 255, 255, 0, 6);
+.address .link {
+  color: var(--contacts-footer-color);
 }
